# gg

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  config.example.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  detect.rs  logger.rs  main.rs  rules.rs
tests/: integration.rs
